--- a/assets/css/custom_korean.css
+++ b/assets/css/custom_korean.css
@@ -1,3 +1,5 @@
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
 
 body{font-family: 'Jeju Gothic', "맑은 고딕"}
+.da-slide h2 { font-family: 'Jeju Gothic', "맑은 고딕"}
+.da-slide p {font-family: 'Jeju Gothic', "맑은 고딕"}
