--- a/assets/css/custom_korean.css
+++ b/assets/css/custom_korean.css
@@ -1,5 +1,12 @@
+@CHARSET "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
-
-body{font-family: 'Jeju Gothic', "맑은 고딕"}
+*{
+	font-size: 16px;
+}
+body{
+	font-family: 'Jeju Gothic', "맑은 고딕"; 
+	
+	font-size: 1em;
+}
 .da-slide h2 { font-family: 'Jeju Gothic', "맑은 고딕"}
 .da-slide p {font-family: 'Jeju Gothic', "맑은 고딕"}
