--- a/assets/css/custom_korean.css
+++ b/assets/css/custom_korean.css
@@ -3,9 +3,10 @@
 *{
 	font-size: 16px;
 }
+h1, h2, h3, h4, h5, h6 {font-family: 'Jeju Gothic', "맑은 고딕";}
+
 body{
-	font-family: 'Jeju Gothic', "맑은 고딕"; 
-	
+	font-family: 'Jeju Gothic', "맑은 고딕"; 	
 	font-size: 1em;
 }
 .da-slide h2 { font-family: 'Jeju Gothic', "맑은 고딕"}
@@ -16,4 +17,83 @@ body{
 }
 .interactive-slider-v2{
 	padding: 150px 0 80px 0 ;
+}
+
+.margin-top-20{
+	margin-top: 20;
+}
+
+
+/********************************/
+ul.history {
+  margin: 0 0 25px;
+  padding: 0;
+  list-style: none;
+}
+ul.history li .thumb img {
+  border-radius: 150px !important;
+  margin: 7px 8px;
+  width: 145px;
+  height: 145px;
+}
+ul.history li .thumb {
+  background: transparent url(../img/history-thumb.png) no-repeat 0 0;
+  width: 227px;
+  height: 160px;
+  margin: 0 0 30px;
+  padding: 0;
+  float: left;
+}
+
+.fadeInUp {
+  -webkit-animation-name: fadeInUp;
+  -moz-animation-name: fadeInUp;
+  -o-animation-name: fadeInUp;
+  animation-name: fadeInUp;
+}
+ul.history li .featured-box {
+  text-align: left;
+  margin-left: 225px;
+  margin-bottom: 50px;
+  min-height: 115px;
+}
+ul.history li .featured-box .box-content {
+  border-top-color: #74c52c;
+}
+ul.history li h4 {
+  margin: 0 0 -27px 0;
+  padding: 0;
+}
+ul.history li p {
+  margin-left: 53px;
+}
+
+.featured-box .box-content {
+  border-radius: 8px !important;
+  border-top: 3px solid #33B8FF;
+  border-top-width: 4px;
+  padding: 30px 30px 10px 30px;
+}
+
+.featured-box {
+  background: #F5F5F5;
+  background-color: transparent;
+  background: -webkit-linear-gradient(top, white 1%, #f9f9f9 98%) repeat scroll 0 0 transparent;
+  background: linear-gradient(to bottom, white 1%, #f9f9f9 98%) repeat scroll 0 0 transparent;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: 1px solid #DFDFDF;
+  border-left: 1px solid #ECECEC;
+  border-radius: 8px;
+  border-right: 1px solid #ECECEC;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.04);
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  min-height: 100px;
+  position: relative;
+  text-align: center;
+  z-index: 1;
 }
