--- a/assets/css/custom_korean.css
+++ b/assets/css/custom_korean.css
@@ -1,16 +1,17 @@
 @CHARSET "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/jejugothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 *{
 	font-size: 16px;
 }
-h1, h2, h3, h4, h5, h6 {font-family: 'Jeju Gothic', "맑은 고딕";}
+h1, h2, h3, h4, h5, h6 {font-family: 'NanumGothic',나눔고딕,'Jeju Gothic', "맑은 고딕";}
 
 body{
-	font-family: 'Jeju Gothic', "맑은 고딕"; 	
+	font-family: 'NanumGothic',나눔고딕,'Jeju Gothic', "맑은 고딕"; 	
 	font-size: 1em;
 }
-.da-slide h2 { font-family: 'Jeju Gothic', "맑은 고딕"}
-.da-slide p {font-family: 'Jeju Gothic', "맑은 고딕"}
+.da-slide h2 { font-family: 'NanumGothic',나눔고딕,'Jeju Gothic', "맑은 고딕"}
+.da-slide p {font-family: 'NanumGothic',나눔고딕,'Jeju Gothic', "맑은 고딕"}
 
 .breadcrumbs-v3.breadcrumbs-lg{
 	padding: 80px 0;
@@ -108,4 +109,31 @@ ul.history li p {
   position: relative;
   text-align: center;
   z-index: 1;
+}
+
+div.service-block-desc ul.line2 li{
+  width: 50%;
+  float: left;
+}
+
+
+@media (max-width: 768px) {
+  div.service-block-desc ul.line2 li{
+    width: 100%;
+  }
+}
+
+/* 블로그 */
+div.news-v3-in h2.title-v2{
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+div.news-v3-in img{
+   display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+div.news-v3-in h3{
+  color: #74c52c;
+  font-size: 1.1em;
 }
